<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="service_stopped">Service stopped</string>
    <string name="counted_to">Counted to %d</string>
    <string name="service_started">Service started</string>
    <string name="log_file_name" translatable="false">FileLog1.txt</string>
    <string name="show_db_content">Show database content</string>
    <string name="clear_db_content">Clear database content</string>
    <string name="clear_screen">Clear screen</string>
    <string name="pref_color_key_switch" translatable="false">pref_color_switch</string>
    <string name="pref_color_switch">Override color?</string>
    <string name="pref_color_switch_summ">Use non-default color from list below?</string>
    <string name="pref_color_key" translatable="false">pref_color</string>

    <string name="pref_color_title">Choose color</string>
    <string name="pref_color_red">Red</string>
    <array name="pref_colors">
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
    </array>
    <string name="scale">Scale</string>
    <string name="rotate">Rotate</string>
    <string name="move">Move</string>
    <string name="alpha">Alpha</string>
    <string name="open_graphic_activity">Open graphic activity</string>
</resources>